# java-spotify-api

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: ci.yml  gradle.yml  release.yml
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  main.rs  session.rs
src/main/java/de/labystudio/spotifyapi/: SpotifyAPI.java  SpotifyAPIFactory.java  SpotifyListener.java  SpotifyListenerAdapter.java
src/main/java/de/labystudio/spotifyapi/config/: SpotifyConfiguration.java
src/main/java/de/labystudio/spotifyapi/model/: MediaKey.java  Track.java
src/main/java/de/labystudio/spotifyapi/open/: Cache.java  OpenSpotifyAPI.java  OpenTrackCache.java
src/main/java/de/labystudio/spotifyapi/open/model/: AccessTokenResponse.java  GraphQLOperation.java
src/main/java/de/labystudio/spotifyapi/open/totp/: Secret.java  SecretFetcher.java  TOTP.java
src/main/java/de/labystudio/spotifyapi/platform/: AbstractSpotifyAPI.java  AbstractTickSpotifyAPI.java
src/main/resources/: secrets.json
src/test/java/: OpenSpotifyApiTest.java  SpotifyDBusParserTest.java  SpotifyDirectTest.java  SpotifyEnableDevMode.java  SpotifyListenerTest.java  SpotifyPlayPauseTest.java  SpotifyProcessTest.java  SpotifyTest.java  TOTPTest.java  WindowMediaSessionTest.java
src/test/java/platform/: SpotifyDirectTest.java  SpotifyListenerTest.java  SpotifyPlayPauseTest.java
src/test/java/platform/linux/: SpotifyDBusParserTest.java
src/test/java/platform/windows/: SpotifyProcessTest.java  WindowMediaSessionTest.java
src/test/resources/dbus/: metadata.variant  playing.variant
(+48 files in other folders)
